# Ising-Wolff

./: .gitignore  README.md
Code/: CMakeLists.txt  a.out  helloworld.cpp  main.cpp  test.cpp
Code/Lib/: CMakeLists.txt  gridState.cpp  gridState.h  isingModel.cpp  isingModel.h  isingState.cpp  isingState.h  monteCarlo.cpp  monteCarlo.h  util.cpp  util.h
Data/: data.csv  data.txt
